--- a/belajar_Angular/src/app/home/home.component.html
+++ b/belajar_Angular/src/app/home/home.component.html
@@ -1,3 +1,8 @@
-<h1>Selamat malam SI52</h1>
-<h1>Hari ini kita belajar menggunakan Framework Angular </h1>
-<p>home works!</p>
+<main>
+    <header class="brand-name">
+        <img class="brand-logo"src="img/logo.png"height="75">
+    </header>    
+    <section class="content">
+        <router-outlet/>
+    </section>
+</main>
