--- a/belajar_Angular/src/app/home/home.component.html
+++ b/belajar_Angular/src/app/home/home.component.html
@@ -1,8 +1,12 @@
-<main>
-    <header class="brand-name">
-        <img class="brand-logo"src="img/logo.png"height="75">
-    </header>    
-    <section class="content">
-        <router-outlet/>
-    </section>
-</main>
+<section>
+    <form action="">
+        <input type="text" placeholder="Filter by city">
+        <button class="primary" type="button">Search</button>
+    </form>
+</section>
+<section class="results">
+    <!-- memanggil component housing-location -->
+    <app-housing-location *ngFor="let housingLocation of housingLocationList" [housingLocation] = "housingLocation">
+
+    </app-housing-location>
+</section>
